--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,13 @@
   </nav>
 
   <section class="search-container">
-    <div class="search-icon"></div>
-    <div class="search-bar">Search GitHub username...</div>
-    <div class="search-button">Search</div>
+    <div class="search-icon">
+      <a href="/"><svg height="24" width="25" xmlns="http://www.w3.org/2000/svg"><path d="M10.609 0c5.85 0 10.608 4.746 10.608 10.58 0 2.609-.952 5-2.527 6.847l5.112 5.087a.87.87 0 01-1.227 1.233l-5.118-5.093a10.58 10.58 0 01-6.848 2.505C4.759 21.16 0 16.413 0 10.58 0 4.747 4.76 0 10.609 0zm0 1.74c-4.891 0-8.87 3.965-8.87 8.84 0 4.874 3.979 8.84 8.87 8.84a8.855 8.855 0 006.213-2.537l.04-.047a.881.881 0 01.058-.053 8.786 8.786 0 002.558-6.203c0-4.875-3.979-8.84-8.87-8.84z" fill="#0079ff"/></svg></a>
+    </div>
+    <div class="search-text">Search GitHub username...</div>
+    <div class="search-button">
+      <button>Search</button>
+    </div>
   </section>
 
   <main class="main-container">
@@ -41,7 +45,7 @@
         <img src="" alt="">
       </div>
       <div class="personal-info">
-        <h1>The Octocat</h1>
+        <h1 class="name">The Octocat</h1>
         <p class="handle">@octocat</p>
         <p class="join-date">Joined 25 Jan 2011</p>
       </div>
@@ -87,16 +91,8 @@
         </div>
       </div>
 
-
-
     </section>
-
   </main>
-  Joined
-
-  Repos
-  Followers
-  Following
 
   <script src="app.js"></script>
 </body>
